<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_baseline_restaurant_menu_24"
            android:title="@string/menu" />
        <item
            android:id="@+id/cart"
            android:icon="@drawable/ic_baseline_add_shopping_cart_24"
            android:title="@string/cart" />
        <item
            android:id="@+id/order"
            android:icon="@drawable/ic_order"
            android:title="@string/order" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_baseline_exit_to_app_24"
            android:title="@string/logout"/>
    </group>
</menu>