<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/ed_name_addfood"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="text"
        android:text=""
        android:textColor="#2e2e"
        android:textColorHint="#f2ff"
        android:textSize="24sp"
        android:paddingStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:met_baseColor="#2e2e"
        app:met_maxCharacters="15"
        app:met_singleLineEllipsis="true"
        tools:ignore="MissingConstraints" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/ed_des_addfood"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:hint="@string/description"
        android:inputType="text"
        android:paddingStart="5dp"
        android:lines="5"
        android:minLines="1"
        android:maxLines="6"
        app:layout_constraintTop_toBottomOf="@id/ed_name_addfood"
        android:text=""
        android:textColor="#2e2e"
        android:textColorHint="#f2ff"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:met_baseColor="#2e2e"
        app:met_singleLineEllipsis="true"
        tools:ignore="MissingConstraints" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/ed_price_addfood"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:hint="@string/price"
        android:inputType="number"
        android:paddingStart="5dp"
        app:layout_constraintTop_toBottomOf="@id/ed_des_addfood"
        android:text=""
        android:textColor="#2e2e"
        android:textColorHint="#f2ff"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:met_baseColor="#2e2e"

        app:met_maxCharacters="15"
        app:met_singleLineEllipsis="true"
        tools:ignore="MissingConstraints" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/ed_discount_addfood"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:hint="@string/discount"
        android:inputType="number"
        android:paddingStart="5dp"
        android:text=""
        app:layout_constraintTop_toBottomOf="@id/ed_price_addfood"
        android:textColor="#2e2e"
        android:textColorHint="#f2ff"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:met_baseColor="#2e2e"

        app:met_maxCharacters="15"
        app:met_singleLineEllipsis="true"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/bt_delete"
        android:layout_width="137dp"
        android:layout_height="52dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/backgroung_bt"
        android:text="Upload"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_discount_addfood" />

    <info.hoang8f.widget.FButton
        android:id="@+id/bt_call"
        android:layout_width="134dp"
        android:layout_height="52dp"
        android:layout_marginStart="8dp"
        android:text="select"
        app:layout_constraintBottom_toBottomOf="@+id/bt_delete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bt_delete"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>